# swagger.json
@@ -12,15 +12,14 @@
     },
     {
       "url": "https://cse-341-final-project-2g2g.onrender.com",
-      "description": "render server"
+      "description": "Render server"
     }
   ],
   "paths": {
     "/parts/": {
       "post": {
-        "tags": [
-          "Parts"
-        ],
+        "tags": ["Parts"],
+        "security": [{ "githubOAuth": [] }],
         "description": "",
         "responses": {
           "201": {
@@ -28,6 +27,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         },
         "requestBody": {
@@ -44,9 +46,7 @@
                     "Brand": "",
                     "Name": "",
                     "Quality": "OEM",
-                    "Vehicles": [
-                      ""
-                    ]
+                    "Vehicles": [""]
                   }
                 }
               }
@@ -55,9 +55,7 @@
         }
       },
       "get": {
-        "tags": [
-          "Parts"
-        ],
+        "tags": ["Parts"],
         "description": "",
         "responses": {
           "200": {
@@ -71,9 +69,8 @@
     },
     "/parts/{partsId}": {
       "put": {
-        "tags": [
-          "Parts"
-        ],
+        "tags": ["Parts"],
+        "security": [{ "githubOAuth": [] }],
         "description": "",
         "parameters": [
           {
@@ -91,6 +88,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -110,9 +110,7 @@
                     "Brand": "String",
                     "Name": "String",
                     "Quality": "String",
-                    "Vehicles": [
-                      "String"
-                    ]
+                    "Vehicles": ["String"]
                   }
                 }
               }
@@ -121,9 +119,7 @@
         }
       },
       "get": {
-        "tags": [
-          "Parts"
-        ],
+        "tags": ["Parts"],
         "description": "",
         "parameters": [
           {
@@ -148,9 +144,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "Parts"
-        ],
+        "tags": ["Parts"],
         "description": "",
         "parameters": [
           {
@@ -177,9 +171,7 @@
     },
     "/parts/findByBrand": {
       "get": {
-        "tags": [
-          "Parts"
-        ],
+        "tags": ["Parts"],
         "description": "",
         "parameters": [
           {
@@ -202,9 +194,7 @@
     },
     "/parts/findByVehicle": {
       "get": {
-        "tags": [
-          "Parts"
-        ],
+        "tags": ["Parts"],
         "description": "",
         "parameters": [
           {
@@ -227,9 +217,7 @@
     },
     "/parts/findByQuality": {
       "get": {
-        "tags": [
-          "Parts"
-        ],
+        "tags": ["Parts"],
         "description": "",
         "parameters": [
           {
@@ -252,9 +240,8 @@
     },
     "/user/": {
       "post": {
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
+        "security": [{ "githubOAuth": [] }],
         "description": "",
         "responses": {
           "201": {
@@ -262,15 +249,17 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
     },
     "/user/createWithArray": {
       "post": {
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
+        "security": [{ "githubOAuth": [] }],
         "description": "",
         "responses": {
           "201": {
@@ -278,15 +267,17 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
     },
     "/user/createWithList": {
       "post": {
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
+        "security": [{ "githubOAuth": [] }],
         "description": "",
         "responses": {
           "201": {
@@ -294,6 +285,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -320,9 +314,7 @@
     },
     "/user/findByType": {
       "get": {
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "description": "",
         "parameters": [
           {
@@ -345,9 +337,7 @@
     },
     "/user/{username}": {
       "get": {
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "description": "",
         "parameters": [
           {
@@ -372,9 +362,8 @@
         }
       },
       "put": {
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
+        "security": [{ "githubOAuth": [] }],
         "description": "",
         "parameters": [
           {
@@ -393,15 +382,16 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
           }
         }
       },
       "delete": {
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "description": "",
         "parameters": [
           {
@@ -428,9 +418,8 @@
     },
     "/vehicle/": {
       "post": {
-        "tags": [
-          "Vehicle"
-        ],
+        "tags": ["Vehicle"],
+        "security": [{ "githubOAuth": [] }],
         "description": "",
         "responses": {
           "201": {
@@ -438,6 +427,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         },
         "requestBody": {
@@ -452,9 +444,7 @@
         }
       },
       "get": {
-        "tags": [
-          "Vehicle"
-        ],
+        "tags": ["Vehicle"],
         "description": "",
         "responses": {
           "200": {
@@ -468,9 +458,8 @@
     },
     "/vehicle/{vehiclesId}": {
       "put": {
-        "tags": [
-          "Vehicle"
-        ],
+        "tags": ["Vehicle"],
+        "security": [{ "githubOAuth": [] }],
         "description": "",
         "parameters": [
           {
@@ -488,6 +477,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -520,9 +512,7 @@
         }
       },
       "get": {
-        "tags": [
-          "Vehicle"
-        ],
+        "tags": ["Vehicle"],
         "description": "",
         "parameters": [
           {
@@ -547,9 +537,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "Vehicle"
-        ],
+        "tags": ["Vehicle"],
         "description": "",
         "parameters": [
           {
@@ -576,9 +564,7 @@
     },
     "/vehicle/findByBrand": {
       "get": {
-        "tags": [
-          "Vehicle"
-        ],
+        "tags": ["Vehicle"],
         "description": "",
         "parameters": [
           {
@@ -601,9 +587,7 @@
     },
     "/vehicle/findByYear": {
       "get": {
-        "tags": [
-          "Vehicle"
-        ],
+        "tags": ["Vehicle"],
         "description": "",
         "parameters": [
           {
@@ -626,9 +610,7 @@
     },
     "/vehicle/findByType": {
       "get": {
-        "tags": [
-          "Vehicle"
-        ],
+        "tags": ["Vehicle"],
         "description": "",
         "parameters": [
           {
@@ -651,9 +633,8 @@
     },
     "/aftermarketComp/": {
       "post": {
-        "tags": [
-          "AftermarketCompanies"
-        ],
+        "tags": ["AftermarketCompanies"],
+        "security": [{ "githubOAuth": [] }],
         "description": "",
         "responses": {
           "201": {
@@ -661,6 +642,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         },
         "requestBody": {
@@ -690,9 +674,7 @@
         }
       },
       "get": {
-        "tags": [
-          "AftermarketCompanies"
-        ],
+        "tags": ["AftermarketCompanies"],
         "description": "",
         "responses": {
           "200": {
@@ -706,9 +688,8 @@
     },
     "/aftermarketComp/{aftermarketId}": {
       "put": {
-        "tags": [
-          "AftermarketCompanies"
-        ],
+        "tags": ["AftermarketCompanies"],
+        "security": [{ "githubOAuth": [] }],
         "description": "",
         "parameters": [
           {
@@ -726,6 +707,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -758,9 +742,7 @@
         }
       },
       "get": {
-        "tags": [
-          "AftermarketCompanies"
-        ],
+        "tags": ["AftermarketCompanies"],
         "description": "",
         "parameters": [
           {
@@ -785,9 +767,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "AftermarketCompanies"
-        ],
+        "tags": ["AftermarketCompanies"],
         "description": "",
         "parameters": [
           {
@@ -814,9 +794,7 @@
     },
     "/aftermarketComp/findByBrand": {
       "get": {
-        "tags": [
-          "AftermarketCompanies"
-        ],
+        "tags": ["AftermarketCompanies"],
         "description": "",
         "parameters": [
           {
@@ -839,9 +817,7 @@
     },
     "/aftermarketComp/findByVehicle": {
       "get": {
-        "tags": [
-          "AftermarketCompanies"
-        ],
+        "tags": ["AftermarketCompanies"],
         "description": "",
         "parameters": [
           {
@@ -864,9 +840,8 @@
     },
     "/brands/": {
       "post": {
-        "tags": [
-          "Brands"
-        ],
+        "tags": ["Brands"],
+        "security": [{ "githubOAuth": [] }],
         "description": "",
         "responses": {
           "201": {
@@ -874,6 +849,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         },
         "requestBody": {
@@ -901,9 +879,7 @@
         }
       },
       "get": {
-        "tags": [
-          "Brands"
-        ],
+        "tags": ["Brands"],
         "description": "",
         "responses": {
           "200": {
@@ -917,9 +893,8 @@
     },
     "/brands/{brandsId}": {
       "put": {
-        "tags": [
-          "Brands"
-        ],
+        "tags": ["Brands"],
+        "security": [{ "githubOAuth": [] }],
         "description": "",
         "parameters": [
           {
@@ -937,6 +912,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -967,9 +945,7 @@
         }
       },
       "get": {
-        "tags": [
-          "Brands"
-        ],
+        "tags": ["Brands"],
         "description": "",
         "parameters": [
           {
@@ -994,9 +970,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "Brands"
-        ],
+        "tags": ["Brands"],
         "description": "",
         "parameters": [
           {
@@ -1023,9 +997,7 @@
     },
     "/brands/findByCountry": {
       "get": {
-        "tags": [
-          "Brands"
-        ],
+        "tags": ["Brands"],
         "description": "",
         "parameters": [
           {
@@ -1048,9 +1020,7 @@
     },
     "/brands/findByName": {
       "get": {
-        "tags": [
-          "Brands"
-        ],
+        "tags": ["Brands"],
         "description": "",
         "parameters": [
           {
@@ -1073,6 +1043,19 @@
     }
   },
   "components": {
+    "securitySchemes": {
+      "githubOAuth": {
+        "type": "oauth2",
+        "flows": {
+          "implicit": {
+            "authorizationUrl": "https://github.com/login/oauth/authorize",
+            "scopes": {
+              "user:email": "Access user email"
+            }
+          }
+        }
+      }
+    },
     "schemas": {
       "Part": {
         "type": "object",
